--- a/frontend/registration.html
+++ b/frontend/registration.html
@@ -7,7 +7,32 @@
     <title>Registration</title>
 </head>
 <body>
-    <h1>Registration Page</h1>
+    <div id="logo-container"> 
+        <a href="Registration.html"> 
+            <img id="logo" src="https://w7.pngwing.com/pngs/131/677/png-transparent-arrow-icon-arrow-symbol-text-logo-computer-wallpaper-thumbnail.png" alt="Вернуться на главную"> 
+        </a> 
+    </div> 
+
+<form action="/register" method="post" text-align: right> 
+
+<a text-align: right id="changePage" href="main.html">Вернутся</a> 
+
+    <label for="email">Електронна пошта:</label> 
+    <input type="email" id="email" name="email" required> 
+
+    <label for="username">Логін:</label> 
+    <input type="text" id="username" name="username" required> 
+
+   <label for="password">Пароль (от 6 до 20 символов):</label> 
+    <input type="password" id="password" name="password" minlength="6" maxlength="20" required> 
+
+<label for="showPassword">Показать пароль:</label> 
+    <input type="checkbox" id="showPassword" onclick="togglePasswordVisibility()"> 
+           
+
+    <button type="submit" href="welcome.html">Зарегистрироваться</button> 
+
+</form> 
     
     <script src="scripts/registration.js"></script>
 </body>
